# autogo-mlx

./: .gitignore  .gitmodules  PORT_PLAN.md  README.md  SUMMARY.md  WRITEUP.md  pyproject.toml  walkthrough.md
.agents/: AGENTS.md
docs/: README.md  human-ranked-sft-proposal.md  lessons_learned.md  rl_evolution_report.md  selfplay_improvements.md  sibling_ensembling_proposal.md  system_overview.md
docs/porting_to_mlx/: PORT_PLAN.md  SUMMARY.md
docs/qna/: fcn-size-transfer-mechanics.md  memory-efficient-sgf-parsing.md  offline-elo-calibration.md  opponent-pool-contamination.md  preventing-rl-collapse-with-pcr.md  replay-buffer-sampling.md  resignation-calibration-mechanics.md  unified-memory-and-league-play-design.md  zstd-compression-advantages.md
docs/rl_findings/: atari_tactical_analysis.md  phase2_rl_training_history.md  phase2_scratch_training_report_2026-06-25.md
experiments/000_smoke/: collect.py  report.md  run_iteration.sh  train.py
experiments/001_train_from_scratch/: Help.md  calibrate_resignation.py  collect.py  evaluate.py  evaluate_behavior_diagnostics.py  pre_collect_random.py  report.md  resignation_config.json  run_iteration.sh  strategy_recommendations.md  train.py
experiments/archive/: Log.txt
scratch/: check_passes_early.py  check_passes_in_iter5.py  evaluate_no_early_pass.py  inspect_all_iters.py  inspect_iter5_npz.py  inspect_nn_inputs.py  play_diagnostic_game.py  print_board_values.py  print_ckpt_shapes.py  test_backtrack.py  test_batch_vs_single.py  test_iter12_move1.py  test_iter12_move1_black.py  test_iter12_to_play.py  test_iter5_move1.py  test_iter6_move1.py  test_mcts_8ch.py  test_step2_mcts.py
scripts/: auto_commit.py  build_cpp.sh  check_parity.py  compile_evolution_report.py  crawl_games.py  distill_bootstrap.py  evaluate_anchors.py  evaluate_rl_vs_anchors.py  overfit_synthetic.py  telemetry_alert.py  train_sft.py  update_report.py  weight_surgery.py
src/autogo_mlx/: __init__.py  batched_inference.py  cpp_bridge.py  dataset.py  gameplay.py  inference.py  loss.py  model.py  play_server.py  (+2 more)
tests/: test_cpp_bridge.py  test_dataset.py  test_fixes_smoke.py  test_inference.py  test_model_forward.py  test_one_step.py  test_play_api.py  test_selfplay_smoke.py  test_sgf.py  test_sgf_generator.py  test_sibling_ensembling.py
(+87 files in other folders)
