[project]
name = "mugo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nils", email = "ersi.ni@nilbot.net" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.2",
    "mup>=1.0.0",
    "mypy>=2.1.0",
    "numpy>=2.4.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "rich>=15.0.0",
    "ruff>=0.15.13",
    "torch>=2.12.0",
    "tyro>=1.0.13",
]

[project.scripts]
mugo = "mugo:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
