[project]
name = "autogo-mlx"
version = "0.1.0"
description = "High-performance native MLX port of AutoGo for Apple Silicon"
readme = "README.md"
authors = [
    { name = "Nils", email = "ersi.ni@nilbot.net" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mlx>=0.31.2",
    "mup>=1.0.0",
    "mypy>=2.1.0",
    "numpy>=2.4.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "rich>=15.0.0",
    "ruff>=0.15.13",
    "torch>=2.12.0",
    "tyro>=1.0.13",
    "uvicorn>=0.49.0",
]

[project.scripts]
autogo-mlx = "autogo_mlx:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogo_mlx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third_party"]
